--- a/portfolio/src/components/NavBar.css
+++ b/portfolio/src/components/NavBar.css
@@ -8,14 +8,16 @@ body {
   background-size: cover; /* Cover the entire viewport */
   background-position: center top; /* Center the background image vertically and horizontally */
   background-repeat: no-repeat; /* Prevent background image from repeating */
-  height: 70vh; /* Ensure the body takes up the full viewport height */
-  overflow: hidden; 
+  height: 100vh; /* Ensure the body takes up the full viewport height */
+  overflow: hidden; /* Hide any overflow to prevent scrolling issues */
 }
 
 .navbar {
   background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent black background */
-  backdrop-filter: blur(0.1px); /* Apply a blur effect to the background */
+  backdrop-filter: blur(10px); /* Apply a blur effect to the background */
   padding: 10px 0;
+  position: relative; /* Ensure navbar is positioned relative */
+  z-index: 2; /* Ensure navbar is above background */
 }
 
 .container {
@@ -25,6 +27,8 @@ body {
   margin: 0 auto;
   max-width: 1200px;
   padding: 0 20px; /* Add padding to the sides */
+  position: relative; /* Ensure container is positioned relative */
+  z-index: 3; /* Ensure container is above navbar */
 }
 
 .logo {
@@ -56,11 +60,68 @@ body {
 }
 
 .nav-links a:hover {
-  text-decoration: underline;
+  color: red;
 }
 
 .profile img {
   width: 40px;
   height: 40px;
   border-radius: 50%; /* Make the profile image circular */
+}
+
+/* Background container styles */
+.background-container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh; /* Ensure the background container covers the entire viewport */
+  overflow: hidden; /* Hide any overflow to prevent scrolling issues */
+  z-index: 1; /* Ensure background container is behind navbar and content */
+}
+
+.background-overlay {
+  position: absolute;
+  top: 50%;
+  left: 35%;
+  transform: translate(-50%, -50%);
+  text-align: left;
+  color: #FFF; /* Text color */
+  z-index: 2; /* Ensure background overlay is above background image */
+}
+
+
+.background-overlay h1 {
+  font-size: 6rem; /* Adjust heading font size */
+  margin-bottom: 10px; /* Space below heading */
+}
+
+.background-overlay p {
+  font-size: 1.2rem; /* Adjust paragraph font size */
+  margin-bottom: 20px; /* Space below paragraph */
+}
+
+.background-overlay .button {
+  display: inline-block;
+  padding: 10px 20px;
+  background-color: rgba(50, 5, 5, 0.5); /* Semi-transparent black background */
+  backdrop-filter: blur(10px);
+  color: #FFF;
+  text-decoration: none;
+  border-radius: 5px;
+  transition: background-color 0.3s ease;
+}
+
+.background-overlay .button:hover {
+  background-color: #FF0000; /* Darker shade of red on hover */
+}
+
+.background-image {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: -1; /* Ensure background image is behind everything */
 }
